<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odva_ethernetip</name>
  <version>0.1.5</version>
  <description>Library implementing ODVA EtherNet/IP (Industrial Protocol).</description>

  <license>BSD</license>
  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>
  <author email="kareem@shehata.ca">Kareem Shehata</author>

  <depend>boost</depend>
  <depend>libconsole-bridge-dev</depend>

  <!-- TODO: figure out how to run tests from plain cmake -->
  <!-- <test_depend>rosunit</test_depend> -->

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
